--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1825,7 +1825,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "40d60faf",
+   "id": "4026a540",
    "metadata": {},
    "outputs": [
     {
@@ -1955,7 +1955,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "fe84f035",
+   "id": "0360f690",
    "metadata": {},
    "outputs": [
     {
@@ -1995,7 +1995,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "d398d94b",
+   "id": "5a77a6b5",
    "metadata": {},
    "outputs": [
     {
@@ -2034,7 +2034,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "ae7edbf9",
+   "id": "61e9262e",
    "metadata": {},
    "outputs": [
     {
@@ -2074,7 +2074,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "d105bb7e",
+   "id": "4cc20ca9",
    "metadata": {},
    "outputs": [
     {
@@ -2113,7 +2113,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "399835d0",
+   "id": "d2bd6b73",
    "metadata": {},
    "outputs": [
     {
@@ -2364,7 +2364,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "8f933814",
+   "id": "d2371588",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2377,7 +2377,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "a343988b",
+   "id": "74b59e27",
    "metadata": {},
    "outputs": [
     {
@@ -2414,7 +2414,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "1394a7da",
+   "id": "a509701a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2428,7 +2428,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "1dec16b3",
+   "id": "a97d9ae5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2441,7 +2441,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "43a6dbf7",
+   "id": "1d93de2e",
    "metadata": {},
    "outputs": [
     {
@@ -2478,7 +2478,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "5ef50e3a",
+   "id": "0e761f46",
    "metadata": {},
    "outputs": [
     {
@@ -2515,7 +2515,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "f452b433",
+   "id": "1679bb97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2528,7 +2528,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "e3aa4e44",
+   "id": "bd6d3a9b",
    "metadata": {},
    "outputs": [
     {
@@ -2564,7 +2564,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "33986bfb",
+   "id": "6923e328",
    "metadata": {},
    "outputs": [
     {
@@ -2600,7 +2600,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "0050f4ac",
+   "id": "0421a4de",
    "metadata": {},
    "outputs": [
     {
@@ -2750,7 +2750,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "b24613eb",
+   "id": "a17895ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2762,7 +2762,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "7059cdeb",
+   "id": "4e39e668",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2774,7 +2774,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "c3888edd",
+   "id": "48d83104",
    "metadata": {},
    "outputs": [
     {
@@ -2810,7 +2810,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "78f8f4e3",
+   "id": "d2f58051",
    "metadata": {},
    "outputs": [
     {
@@ -2963,8 +2963,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "id": "16a35245",
+   "execution_count": 138,
+   "id": "9d7f0dfa",
    "metadata": {},
    "outputs": [
     {
@@ -3094,16 +3094,18 @@
        "Griffin High School           97.138965          90.599455  "
       ]
      },
-     "execution_count": 134,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Reorder the columns in the order you want them to appear.\n",
+    "# Reorder the columns in the order you want them to appear\n",
+    "\n",
     "new_column_order = [\"School Type\", \"Total Students\", \"Total School Budget\", \"Per Student Budget\", \"Average Math Score\", \"Average Reading Score\", \"% Passing Math\", \"% Passing Reading\", \"% Overall Passing\"]\n",
     "\n",
-    "# Assign district summary df the new column order.\n",
+    "# Assign district summary df the new column order\n",
+    "\n",
     "per_school_summary_df = per_school_summary_df[new_column_order]\n",
     "\n",
     "per_school_summary_df.head()"
@@ -3111,24 +3113,300 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d1f2a2e5",
+   "execution_count": 136,
+   "id": "b22ed8fb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "      <td>94.594595</td>\n",
+       "      <td>95.945946</td>\n",
+       "      <td>90.540541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "\n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools\n",
+    "\n",
+    "top_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=False)\n",
+    "\n",
+    "top_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "5474fc26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Johnson High School              $650.00           77.072464   \n",
+       "\n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
+       "\n",
+       "                       % Passing Reading  % Overall Passing  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show bottom five schools\n",
+    "\n",
+    "bottom_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=True)\n",
+    "\n",
+    "bottom_schools.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1300ff7c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c24c9dc",
+   "id": "c83aca62",
    "metadata": {},
    "outputs": [],
    "source": []
