--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1825,7 +1825,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "1ac466ad",
+   "id": "628ebca5",
    "metadata": {},
    "outputs": [
     {
@@ -1955,7 +1955,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "b3a3e6c5",
+   "id": "4f23ec70",
    "metadata": {},
    "outputs": [
     {
@@ -1995,7 +1995,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "5d3ddae1",
+   "id": "7fa5647f",
    "metadata": {},
    "outputs": [
     {
@@ -2034,7 +2034,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "1938e966",
+   "id": "efb72286",
    "metadata": {},
    "outputs": [
     {
@@ -2074,7 +2074,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "ac016484",
+   "id": "31fc451a",
    "metadata": {},
    "outputs": [
     {
@@ -2113,7 +2113,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "aa38018c",
+   "id": "464f6d9c",
    "metadata": {},
    "outputs": [
     {
@@ -2364,7 +2364,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "f30a19ab",
+   "id": "51bf112c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2377,7 +2377,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "78453a61",
+   "id": "ff8bfcf6",
    "metadata": {},
    "outputs": [
     {
@@ -2414,7 +2414,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "d0567d33",
+   "id": "6f2309e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2428,7 +2428,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "4f41c79e",
+   "id": "b6b93b48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2441,7 +2441,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "6e2d438d",
+   "id": "3aa6b0f0",
    "metadata": {},
    "outputs": [
     {
@@ -2478,7 +2478,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "2f12efa1",
+   "id": "302ff42c",
    "metadata": {},
    "outputs": [
     {
@@ -2515,7 +2515,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "bd9f6d8c",
+   "id": "114099b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2528,7 +2528,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "32fcbaf2",
+   "id": "4a1c938c",
    "metadata": {},
    "outputs": [
     {
@@ -2564,7 +2564,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "a0a86866",
+   "id": "3e6a884b",
    "metadata": {},
    "outputs": [
     {
@@ -2600,7 +2600,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "1bc5923d",
+   "id": "5261c95a",
    "metadata": {},
    "outputs": [
     {
@@ -2750,7 +2750,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "73718de5",
+   "id": "dbb8b870",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2762,7 +2762,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "cdc3ad22",
+   "id": "29b21c24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2774,7 +2774,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "d8e3f1ec",
+   "id": "78cac591",
    "metadata": {},
    "outputs": [
     {
@@ -2810,7 +2810,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "cecddbe0",
+   "id": "8da9eb2e",
    "metadata": {},
    "outputs": [
     {
@@ -2964,7 +2964,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "d66ce659",
+   "id": "e1dee4d0",
    "metadata": {},
    "outputs": [
     {
@@ -3114,7 +3114,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "db452602",
+   "id": "0143f0f2",
    "metadata": {},
    "outputs": [
     {
@@ -3260,7 +3260,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "5402ac1c",
+   "id": "631f3dcc",
    "metadata": {},
    "outputs": [
     {
@@ -3406,7 +3406,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "536e0f97",
+   "id": "78a2e576",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3424,7 +3424,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "e27fbaf6",
+   "id": "7064a39b",
    "metadata": {},
    "outputs": [
     {
@@ -3570,7 +3570,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "7a0bd2c5",
+   "id": "b7814c30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3588,7 +3588,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "39e7544e",
+   "id": "1d04b175",
    "metadata": {},
    "outputs": [
     {
@@ -3625,7 +3625,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "ab1587bd",
+   "id": "7336e2ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3643,7 +3643,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "c2f974a8",
+   "id": "b295e364",
    "metadata": {},
    "outputs": [
     {
@@ -3680,7 +3680,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "9ccae95e",
+   "id": "5fa94802",
    "metadata": {},
    "outputs": [
     {
@@ -3787,7 +3787,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "15ed9b1a",
+   "id": "adb8edbd",
    "metadata": {},
    "outputs": [
     {
@@ -3894,7 +3894,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "f4ea0c11",
+   "id": "31c2bd73",
    "metadata": {},
    "outputs": [
     {
@@ -4002,7 +4002,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "013e77e8",
+   "id": "0145ff27",
    "metadata": {},
    "outputs": [
     {
@@ -4110,7 +4110,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "931c8f93",
+   "id": "0f201793",
    "metadata": {},
    "outputs": [
     {
@@ -4141,7 +4141,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "2cfa02dc",
+   "id": "9641da7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4159,7 +4159,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "ddd3680b",
+   "id": "7e64185c",
    "metadata": {},
    "outputs": [
     {
@@ -4318,7 +4318,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "4fa739b8",
+   "id": "53458a5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4338,7 +4338,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "681c2992",
+   "id": "41764f09",
    "metadata": {},
    "outputs": [
     {
@@ -4364,7 +4364,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "b3c98ff0",
+   "id": "9ba6b74f",
    "metadata": {},
    "outputs": [
     {
@@ -4484,7 +4484,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "fc837967",
+   "id": "223eaf45",
    "metadata": {},
    "outputs": [
     {
@@ -4607,7 +4607,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "3a2547b5",
+   "id": "f740c373",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4620,7 +4620,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "67853e45",
+   "id": "ec54c016",
    "metadata": {},
    "outputs": [
     {
@@ -4784,7 +4784,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "c52335bf",
+   "id": "e0324d23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4804,7 +4804,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "c6c2d008",
+   "id": "1b25c88b",
    "metadata": {},
    "outputs": [
     {
@@ -4907,7 +4907,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "93cbfb74",
+   "id": "21ab5ec3",
    "metadata": {},
    "outputs": [
     {
@@ -4996,6 +4996,7 @@
    ],
    "source": [
     "# Proper formatting to ensure the DataFrame adheres to grade-reporting standards\n",
+    "\n",
     "size_summary_df[\"Average Math Score\"] = size_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
     "\n",
     "size_summary_df[\"Average Reading Score\"] = size_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
@@ -5011,32 +5012,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b9e919f4",
+   "execution_count": 184,
+   "id": "7642310f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculate averages for the desired columns\n",
+    "\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "4eb019aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame\n",
+    "\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "id": "ddd7c0c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Proper formatting to ensure the DataFrame adheres to grade-reporting standards\n",
+    "\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "235e479c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de7b0255",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee38636d",
+   "id": "fe5f5b44",
    "metadata": {},
    "outputs": [],
    "source": []
